--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,15 @@
         android:theme="@style/Theme.Guess"
         tools:targetApi="31">
         <activity
+            android:name=".GreetingActivity"
+            android:exported="false"
+            android:label="@string/title_activity_greeting"
+            android:theme="@style/Theme.Guess" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.Guess">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
